feat: paginate products with `Link` header
